<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/locationFragment">

    <fragment
        android:id="@+id/locationFragment"
        android:name="com.example.teleweather.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location">
        <action
            android:id="@+id/action_locationFragment_to_pronosticoFragment"
            app:destination="@id/pronosticoFragment" />
    </fragment>

    <fragment
        android:id="@+id/pronosticoFragment"
        android:name="com.example.teleweather.PronosticoFragment"
        android:label="@string/title_pronostico"
        tools:layout="@layout/fragment_pronostico">
        <argument
            android:name="idLocation"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="days"
            app:argType="integer"
            android:defaultValue="7" />
    </fragment>

    <fragment
        android:id="@+id/deportesFragment"
        android:name="com.example.teleweather.DeporteFragment"
        android:label="@string/title_deportes"
        tools:layout="@layout/fragment_deporte" />
</navigation>