<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DeporteFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCityRegion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_city_region"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearchSports">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCityRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSearchSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_search_sports"
        app:cornerRadius="8dp"
        android:textColor="#673AB7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDeportes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tilCityRegion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_deporte" />

    <TextView
        android:id="@+id/textViewNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_partidos_found"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewDeportes"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewDeportes"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewDeportes"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewDeportes" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewDeportes"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewDeportes"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewDeportes"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewDeportes" />

</androidx.constraintlayout.widget.ConstraintLayout>