<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PronosticoFragment">

    <LinearLayout
        android:id="@+id/layoutInputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLocationId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_location_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLocationId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDays"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_days">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSearchForecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:textColor="#673AB7"
            app:cornerRadius="8dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ciudad"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/layoutInputs"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPronosticos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_pronostico" />

    <TextView
        android:id="@+id/textViewNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast_not_found"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewPronosticos"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewPronosticos"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewPronosticos"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewPronosticos" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewPronosticos"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewPronosticos"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewPronosticos"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewPronosticos" />

</androidx.constraintlayout.widget.ConstraintLayout>